--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,7 @@
     "lib": ["dom", "es2015"],
     "outDir": "dist"
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "scripts"
-  ],
+  "exclude": ["node_modules", "dist", "scripts", "src-old"],
   "angularCompilerOptions": {
     "skipTemplateCodegen": true
   }
