--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
   "scripts": {
     "ngc": "ngc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && npm run ngc",
+    "build": "rm -rf dist && npm run copy-files && npm run ngc",
+    "copy-files": "copyfiles -u 1 src/**/*.js dist/",
     "publishPackage": "npm run build && npm publish"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/walterchau/ionic-mqtt.git"
+    "url": "git+https://github.com/emalherbi/ionic-mqtt.git"
   },
   "keywords": [
     "mqtt",
     "ionic",
     "paho-mqtt"
   ],
-  "author": "Walter Chau",
+  "author": "Eduardo Malherbi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/walterchau/ionic-mqtt/issues"
+    "url": "https://github.com/emalherbi/ionic-mqtt/issues"
   },
-  "homepage": "https://github.com/walterchau/ionic-mqtt#readme",
+  "homepage": "https://github.com/emalherbi/ionic-mqtt#readme",
   "dependencies": {
     "@angular/common": "^9.1.9",
     "@angular/core": "^9.1.9",
@@ -43,18 +44,19 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "^0.901.7",
-    "@angular-devkit/build-angular": "^0.901.7",
+    "@angular-devkit/build-angular": "^0.1002.0",
     "@angular-devkit/core": "^9.1.7",
     "@angular-devkit/schematics": "^9.1.7",
     "@angular/cli": "^9.1.7",
     "@angular/compiler": "^9.1.9",
     "@angular/compiler-cli": "^9.1.9",
     "@angular/language-service": "^9.1.9",
-    "@ionic/angular-toolkit": "^2.2.0",
+    "@ionic/angular-toolkit": "^2.3.3",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^14.0.5",
     "codelyzer": "^5.0.0",
+    "copyfiles": "^2.4.0",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
     "karma": "^5.0.9",
